feat: get logs